--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Work Hard Productions</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="assets/WH-PNG.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -20,5 +21,16 @@
           </ul>
         </nav>
       </header>
+
+      <div class="banner"></div>
+
+      <section class="article">
+        <h1 class="title">Sobre a Work Hard</h1>
+        <div class="conteudo">
+          <div class="txt1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod incidunt culpa veniam nulla atque ipsa quos necessitatibus labore maxime dignissimos soluta fugit, omnis rem adipisci voluptatibus cumque tempora facere ullam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem, molestiae natus expedita tempora rerum non est aliquam aspernatur, atque illo in. Ipsam voluptas temporibus illo distinctio aut soluta maxime omnis.</div>
+          <div class="img"></div>
+        </div>
+      </section>
+
 </body>
 </html>
