--- a/index.html
+++ b/index.html
@@ -27,8 +27,39 @@
       <section class="article">
         <h1 class="title">Sobre a Work Hard</h1>
         <div class="conteudo">
-          <div class="txt1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod incidunt culpa veniam nulla atque ipsa quos necessitatibus labore maxime dignissimos soluta fugit, omnis rem adipisci voluptatibus cumque tempora facere ullam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem, molestiae natus expedita tempora rerum non est aliquam aspernatur, atque illo in. Ipsam voluptas temporibus illo distinctio aut soluta maxime omnis.</div>
+          <div class="txt1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod incidunt cu
+            lpa veniam nulla atque ipsa quos necessitatibus labore maxime dignissimos soluta fugit, omn
+            is rem adipisci voluptatibus cumque tempora facere ullam. Lorem ipsum dolor sit amet consecte
+            tur, adipisicing elit. Quidem, molestiae natus expedita tempora rerum non est aliquam aspernat
+            ur, atque illo in. Ipsam voluptas temporibus illo distinctio aut soluta maxime omnis.</div>
           <div class="img"></div>
+        </div>
+      </section>
+
+      <section class="article">
+        <h1 class="title">Projetos</h1>
+        <div class="conteudo">
+          <div class="pj">
+            <div class="img-link"></div>
+            <h2>Projeto</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ex consequatur re
+              pudiandae commodi aliquid, praesentium ratione dolorem quos soluta? Fugit accusamus possim
+              us, tempore rerum magni aperiam doloremque optio mollitia rem.</p>
+          </div>
+          <div class="pj">
+            <div class="img-link"></div>
+            <h2>Projeto</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ex consequatur re
+              pudiandae commodi aliquid, praesentium ratione dolorem quos soluta? Fugit accusamus possim
+              us, tempore rerum magni aperiam doloremque optio mollitia rem.</p>
+          </div>
+          <div class="pj">
+            <div class="img-link"></div>
+            <h2>Projeto</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ex consequatur re
+              pudiandae commodi aliquid, praesentium ratione dolorem quos soluta? Fugit accusamus possim
+              us, tempore rerum magni aperiam doloremque optio mollitia rem.</p>
+          </div>
         </div>
       </section>
 
