form and animation

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         </nav>
       </header>
 
-      <div class="banner"></div>
+      <div class="banner">
+        <h1 class="title-principal">Work Hard <br>
+        Productions</h1>
+      </div>
 
       <section class="article">
         <h1 class="title">Sobre a Work Hard</h1>
@@ -32,7 +35,8 @@
             is rem adipisci voluptatibus cumque tempora facere ullam. Lorem ipsum dolor sit amet consecte
             tur, adipisicing elit. Quidem, molestiae natus expedita tempora rerum non est aliquam aspernat
             ur, atque illo in. Ipsam voluptas temporibus illo distinctio aut soluta maxime omnis.</div>
-          <div class="img"></div>
+          <div id="bola1"></div>
+          <div id="bola2"></div>
         </div>
       </section>
 
@@ -59,6 +63,38 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ex consequatur re
               pudiandae commodi aliquid, praesentium ratione dolorem quos soluta? Fugit accusamus possim
               us, tempore rerum magni aperiam doloremque optio mollitia rem.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="orcamento">
+        <h1 class="title">Solicite um Orçamento</h1>
+        <div class="orcamento-container">
+          <div class="form">
+            <form>
+              <input class="label" type="text" placeholder="Insira seu nome"/>
+              <input class="label" type="email" placeholder="Insira seu Email"/>
+              <input class="label" type="tel" placeholder="Insira seu Telefone(cel)"/>
+              <input class="mensagem" type="text" placeholder="Deixe sua mensagem"/>
+            </form>
+          </div>
+          <div class="contacts">
+            <div class="box">
+              <img src="assets/wpp.png" id="icon-wpp" class="img-social" alt="">
+              <div class="contato"><a href="https://api.whatsapp.com/send?phone=5511942648451" target="_black">(11)94264-8451</a></div>
+            </div>
+            <div class="box">
+              <img src="assets/email.png" id="icon-wpp" class="img-social" alt="">
+              <div class="contato"><a href="mailto:hardeditionwork@gmail.com" target="_blank">hardeditionwork@gmail.com</a></div>
+            </div>
+            <div class="box">
+              <img src="assets/twitter-logo-3.png" id="icon-wpp" class="img-social" alt="">
+              <div class="contato"><a href="https://twitter.com/whproductionsbr" target="_blank">@whproductionsbr</a></div>
+            </div>
+            <div class="box">
+              <img src="assets/insta.png" id="icon-wpp" class="img-social" alt="">
+              <div class="contato"><a href="instagram.com/workhardproductionsbr" target="_blank">@workhardproductionsbr</a></div>
+            </div>
           </div>
         </div>
       </section>
