--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <header>
         <nav>
-          <a class="logo1" href="/">Work Hard Productions</a>
+          <a class="logo1" href="/" id="title1">Work Hard Productions</a>
+          <a class="logo1" href="/" id="title2">WH</a>
           <ul class="nav-list">
             <li><a class="link" href="/" onclick="Home()">Home</a></li>
             <li><a class="link" href="/" onclick="Sobre()">Sobre</a></li>
@@ -39,8 +40,8 @@
         </div>
       </section>
 
-      <section class="article">
-        <h1 class="title">Projetos</h1>
+      <section class="article2">
+        <h1 class="title">Projetos:</h1>
         <div class="conteudo">
           <div class="pj">
             <div class="img-link"></div>
