--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
           <a class="logo1" href="/" id="title1">Work Hard Productions</a>
           <a class="logo1" href="/" id="title2">WH</a>
           <ul class="nav-list">
-            <li><a class="link" href="/" onclick="Home()">Home</a></li>
-            <li><a class="link" href="/" onclick="Sobre()">Sobre</a></li>
-            <li><a class="link" href="/" onclick="Projetos()">Projetos</a></li>
-            <li><a class="link" href="/" onclick="Orcamento()">Solicitar Orçamento</a></li>
+            <li><a class="link" href="#home"onclick="home()">Home</a></li>
+            <li><a class="link" href="#sobre"onclick="sobre()">Sobre</a></li>
+            <li><a class="link" href="#projetos"onclick="projetos()">Projetos</a></li>
+            <li><a class="link" href="#orcamento"onclick="orcamento()">Solicitar Orçamento</a></li>
           </ul>
         </nav>
       </header>
@@ -27,25 +27,21 @@
         Productions</h1>
       </div>
 
-      <section class="article">
+      <section class="article" id="sobre">
         <h1 class="title">Sobre a Work Hard</h1>
         <div class="conteudo">
-          <div class="txt1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod incidunt cu
-            lpa veniam nulla atque ipsa quos necessitatibus labore maxime dignissimos soluta fugit, omn
-            is rem adipisci voluptatibus cumque tempora facere ullam. Lorem ipsum dolor sit amet consecte
-            tur, adipisicing elit. Quidem, molestiae natus expedita tempora rerum non est aliquam aspernat
-            ur, atque illo in. Ipsam voluptas temporibus illo distinctio aut soluta maxime omnis.</div>
+          <div class="txt1">A Work Hard inicialmente era chamada de "Work Hard Edition", agora, em 2022, se chama "Work Hard Productions". Temos como missão oportunizar novos desenvolvedores dentro do mercado de trabalho, pois sabemos que não é um mercado tão facil para entrar! Damos a oportunidade de pessoas novas na área desenvolverem pequenos sites para terceiros como um job profissional que de fato é, e é claro, tudo supervisionado. Realizamos pequenos sites para pessoa física e jurídica, entre em contato para conhecer melhor o nosso trabalho e faça um orçamento. Trabalhando com a WH você não só sai satisfeito com o trabalho como também ajuda a um programador ter oportunidade de se aprimorar e se firmar no mercado de trabalho. </div>
           <div id="bola1"></div>
-          <div id="bola2"></div>
+          <div id="bola2"><img src="assets/maos-dadas.jpeg" alt="mãos dadas"></div>
         </div>
       </section>
 
-      <section class="article2">
-        <h1 class="title">Projetos:</h1>
+      <section class="article2" id="projetos">
+        <h1 class="title" id="projetos">Projetos:</h1>
         <div class="conteudo">
           <div class="pj">
             <div class="img-link"></div>
-            <h2>Projeto</h2>
+            <h2>Contador</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ex consequatur re
               pudiandae commodi aliquid, praesentium ratione dolorem quos soluta? Fugit accusamus possim
               us, tempore rerum magni aperiam doloremque optio mollitia rem.</p>
@@ -67,7 +63,7 @@
         </div>
       </section>
 
-      <section class="orcamento">
+      <section class="orcamento" id="orcamento">
         <h1 class="title">Solicite um Orçamento</h1>
         <div class="orcamento-container">
           <div class="form">
@@ -81,19 +77,19 @@
           </div>
           <div class="contacts">
             <div class="box">
-              <img src="assets/wpp.png" id="icon-wpp" class="img-social" alt="">
+              <img src="assets/wpp-amarelo.png" id="icon-wpp" class="img-social" alt="">
               <div class="contato"><a href="https://api.whatsapp.com/send?phone=5511942648451" target="_black">(11)94264-8451</a></div>
             </div>
             <div class="box">
-              <img src="assets/email.png" id="icon-wpp" class="img-social" alt="">
+              <img src="assets/gmail-amarelo.png" id="icon-wpp" class="img-social" alt="">
               <div class="contato"><a href="mailto:hardeditionwork@gmail.com" target="_blank">hardeditionwork@gmail.com</a></div>
             </div>
             <div class="box">
-              <img src="assets/twitter-logo-3.png" id="icon-wpp" class="img-social" alt="">
+              <img src="assets/icons-twiiter.png" id="icon-wpp" class="img-social" alt="">
               <div class="contato"><a href="https://twitter.com/whproductionsbr" target="_blank">@whproductionsbr</a></div>
             </div>
             <div class="box">
-              <img src="assets/insta.png" id="icon-wpp" class="img-social" alt="">
+              <img src="assets/icons-insta.png" id="icon-wpp" class="img-social" alt="">
               <div class="contato"><a href="instagram.com/workhardproductionsbr" target="_blank">@workhardproductionsbr</a></div>
             </div>
           </div>
