--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
         <h1 class="title" id="projetos">Projetos:</h1>
         <div class="conteudo">
           <div class="pj">
-            <div class="img-link" id="contador"></div>
+            <a href="http://contadorworkhardp.com.br/" target="_blank">
+              <div class="img-link" id="contador"></div>
+            </a>
             <h2>Contador</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ex consequatur re
-              pudiandae commodi aliquid, praesentium ratione dolorem quos soluta? Fugit accusamus possim
-              us, tempore rerum magni aperiam doloremque optio mollitia rem.</p>
+            <p>Um básico contador feito com HTML5, CSS3, e JavaSript</p>
           </div>
           <div class="pj">
-            <div class="img-link"></div>
-            <h2>Projeto</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ex consequatur re
-              pudiandae commodi aliquid, praesentium ratione dolorem quos soluta? Fugit accusamus possim
-              us, tempore rerum magni aperiam doloremque optio mollitia rem.</p>
+            <a href="https://anthonyd12.github.io/landingPage/" target="_blank">
+              <div class="img-link"></div>
+            </a>
+            <h2>LandingPage</h2>
+            <p>Landing Page baseada na empresa fictícia "Work Hard Music"</p>
           </div>
           <div class="pj">
             <div class="img-link"></div>
